--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "author": "Raju",
   "license": "ISC",
   "dependencies": {
-    "cypress": "11.0.0",
+    "cypress": "^11.2.0",
     "cypress-downloadfile": "^1.2.3",
-    "cypress-xpath": "^2.0.1"
+    "cypress-xpath": "^2.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
-    "cypress-file-upload": "^5.0.8"
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
+    "cypress-mochawesome-reporter": "^3.8.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
